Fix h1 on mobile

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a:hover{
     text-transform:uppercase;
     font-family: 'Josefin Slab', serif;
     font-weight: 400;
-    font-size: 4rem;
+    font-size: 1.2rem;
     color: #000;
 }
 .header-container h1 a {
